# TensorRT-Demo

./: Generateengine.sh  README.md  Replase.py  build.sh  comparewithbase.py  infer.sh  model2onnx.py
Myplugin/: CMakeLists.txt
Myplugin/Add/: Add.cpp  Add.cu  Add.cuh
Myplugin/include/: BaseStaticIPluginCreator.h  BaseStaticPlugin.h
